bug PRD Reviewer: Lynn Comment: increaed the z-index to 3000 for the "Sign in using Open ID" checkbox so it shows up in the footer.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -1525,7 +1525,7 @@ body, table td, select
 	position: absolute;
 	left: 15px;
 	bottom: 15px;
-	z-index: 1000;
+	z-index: 3000;
 	color: #353838;
 }
 
